# scaffold-cmake-catch2

./: CMakeLists.txt  README.md
src/: Library.cpp  Library.h  main.cpp
tests/: test_case.cpp
